--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google-cloud/vertexai": "^1.10.0",
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "firebase-admin": "^13.6.0",
     "mongoose": "^9.1.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
